# wireguard-builder-rs

./: Cargo.toml  LICENSE  README.md  crates.js  docker-compose.yml  search-index.js  settings.html  source-files.js
.github/: dependabot.yml  index.html
.github/workflows/: lint.yml  (+3 more)
api/: Cargo.toml  Dockerfile
api/migrations/2022-01-10-140113_initial_setup/: down.sql  up.sql
api/migrations/2022-01-11-155257_fix_vpn_network/: down.sql  up.sql
api/migrations/2022-01-12-085959_fix_vpn_ip_addresses_name/: down.sql  up.sql
api/migrations/2022-01-13-114035_fix_delete_cascade/: down.sql  up.sql
api/migrations/2022-01-13-155046_fix_seq_name_vpn_ip_addresses/: down.sql  up.sql
api/migrations/2022-01-14-155809_add_user/: up.sql
api/migrations/2022-01-24-082233_initial_user/: up.sql
api/migrations/2022-02-06-124359_allowed_ips/: down.sql  up.sql
api/src/: crypto.rs  database.rs  main.rs  models.rs  schema.rs  schemas.rs  validate.rs
api/src/models/: allowed_ips.rs  client.rs  dns_server.rs  keypair.rs  server.rs  user.rs  vpn_ip_address.rs  vpn_network.rs
api/src/schemas/: client.rs  dns_server.rs  keypair.rs  server.rs  vpn_ip_address.rs  vpn_network.rs
src/: main.rs  schemas.rs
ui/: Dockerfile  Dockerfile_React  package-lock.json  package.json
wireguard_builder_rs/: all.html  fn.establish_connection.html  fn.get_token_from_headers.html  fn.gql_playground.html  fn.graphql_playground.html  fn.graphql_query.html  fn.graphql_request.html  fn.index.html  fn.main.html  fn.rocket.html  fn.run_migrations.html  index.html  sidebar-items.js  struct.Token.html
(+488 files in other folders)
